--- a/designer-furniture/frontend/package.json
+++ b/designer-furniture/frontend/package.json
@@ -14,9 +14,10 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.1",
     "styled-components": "^5.3.10",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "webpack": "^5.98.0"
   },
   "scripts": {
     "start": "react-scripts start",
