--- a/designer-furniture/frontend/package.json
+++ b/designer-furniture/frontend/package.json
@@ -3,21 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^2.6.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.3",
-    "i": "^0.3.7",
-    "npm": "^11.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.3.0",
-    "react-scripts": "^5.0.1",
-    "styled-components": "^5.3.10",
-    "web-vitals": "^2.1.4",
-    "webpack": "^5.98.0"
+    "react-scripts": "5.0.1",
+    "react-slick": "^0.30.3",
+    "redux": "^5.0.1",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.16",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,5 +44,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
