--- a/designer-furniture/frontend/package.json
+++ b/designer-furniture/frontend/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "axios": "^1.8.4",
+    "prop-types": "^15.8.1",
     "react": "^19.0.0",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^19.0.0",
     "react-router": "^7.4.0",
     "react-router-dom": "^7.4.0",
     "react-slick": "^0.30.3",
+    "react-toastify": "^11.0.5",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
